JS cadastro login funcionando

--- a/corrida.html
+++ b/corrida.html
@@ -38,7 +38,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./capaceteracing1.html" class="card">
               <img src="./imgracing/capaceteracing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -52,7 +52,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capaceteracing3.html" class="card">
               <img src="./imgracing/capaceteracing3.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capaceteracing2.html" class="card">
               <img src="./imgracing/capaceteracing2.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -84,7 +84,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing1.html" class="card">
               <img src="./imgracing/macacaoracing1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -98,7 +98,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing2.html" class="card">
               <img src="./imgracing/macacaoracing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing3.html" class="card">
               <img src="./imgracing/macacaoracing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -130,7 +130,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvaracing1.html" class="card">
               <img src="./imgracing/luvaracing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -144,30 +144,30 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+            <a href="./luvaracing2.html" class="card">
+              <img src="./imgracing/luvaracing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
-                    <span class="card__status">R$500.00</span>
+                    <h3 class="card__title">Luva Corsa Evokart</h3>
+                    <span class="card__status">R$129,00</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Luva Racing n°2.</p>
               </div>
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+            <a href="./luvaracing3.html" class="card">
+              <img src="./imgracing/luvaracing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <h3 class="card__title">Luva Racing Rabbit</h3>        
+                    <span class="card__status">R$299,90</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Luva Racing n°3.</p>
               </div>
             </a>
           </li>  
@@ -176,7 +176,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./sapatilharacing1.html" class="card">
               <img src="./imgracing/sapatilharacing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -190,7 +190,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./sapatilharacing2.html" class="card">
               <img src="./imgracing/sapatilharacing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -204,8 +204,8 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgracing/sapatilharacing3.jpg" class="card__image" alt="" />
+            <a href="./sapatilharacing3.html " class="card">
+              <img src="./imgracing/sapatilharacing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
