--- a/moto.html
+++ b/moto.html
@@ -38,7 +38,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./capacetemoto1.html" class="card">
               <img src="./imgmoto/capacetemoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -52,8 +52,8 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgmoto/capacetemoto2.png" class="card__image" alt="" />
+            <a href="./capacetemoto2.html" class="card">
+              <img src="./imgmoto/capacetemoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="capacetemoto3.html" class="card">
               <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -84,7 +84,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto1.html" class="card">
               <img src="./imgmoto/macacaomoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -98,7 +98,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto2.html" class="card">
               <img src="./imgmoto/macacaomoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto3.html" class="card">
               <img src="./imgmoto/macacaomoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -130,7 +130,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto1.html" class="card">
               <img src="./imgmoto/luvamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -144,7 +144,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto2.html" class="card">
               <img src="./imgmoto/luvamoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -158,7 +158,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto3.html" class="card">
               <img src="./imgmoto/luvamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -176,7 +176,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./botamoto1.html" class="card">
               <img src="./imgmoto/botamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -190,7 +190,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botamoto2.html" class="card">
               <img src="./imgmoto/botamoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -204,7 +204,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botamoto3.html" class="card">
               <img src="./imgmoto/botamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
