--- a/kart.html
+++ b/kart.html
@@ -38,8 +38,8 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/capacete1.png"  class="card__image" alt="" />
+            <a href="./capacetekart1.html" class="card">
+              <img src="./imgkart/capacetekart1.png"  class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
@@ -52,8 +52,8 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/capacete2.jpg" class="card__image" alt="" />
+            <a href="./capacetekart2.html" class="card">
+              <img src="./imgkart/capacetekart2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
@@ -66,8 +66,8 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/capacete3.png" class="card__image" alt="" />
+            <a href="./capacetekart3.html" class="card">
+              <img src="./imgkart/capacetekart3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
@@ -84,7 +84,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaokart1.html" class="card">
               <img src="./imgkart/macacaokart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -98,8 +98,8 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/macacãokart2.jpg" class="card__image" alt="" />
+            <a href="./macacaokart2.html" class="card">
+              <img src="./imgkart/macacãokart2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
@@ -112,8 +112,8 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/macacaokart3.jpg" class="card__image" alt="" />
+            <a href="./macacaokart3.html" class="card">
+              <img src="./imgkart/macacaokart3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
@@ -130,7 +130,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvakart1.html" class="card">
               <img src="./imgkart/luvakart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -144,7 +144,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvakart2.html" class="card">
               <img src="./imgkart/luvakart2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -158,7 +158,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvakart3.html" class="card">
               <img src="./imgkart/luvakart3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -176,8 +176,8 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/sapatilha1.jpg" class="card__image" alt="" />
+            <a href="./sapatilhakart1.html" class="card">
+              <img src="./imgkart/sapatilhakart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
@@ -190,8 +190,8 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/sapatilha2.jpg" class="card__image" alt="" />
+            <a href="sapatilhakart2.html" class="card">
+              <img src="./imgkart/sapatilhakart2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
@@ -204,8 +204,8 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgkart/sapatilha3.jpg" class="card__image" alt="" />
+            <a href="./sapatilhakart3.html" class="card">
+              <img src="./imgkart/sapatilhakart3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
