página de produtos - att parcial

--- a/kart.html
+++ b/kart.html
@@ -89,8 +89,8 @@
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão MP20 Pailler Racing Vermelho</h3>       
-                    <span class="card__status">R$800,00</span>
+                    <h3 class="card__title">Macacão MP20 Pailler Racing</h3>       
+                    <span class="card__status">R$ 899,90</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Kart n°1</p>
@@ -103,8 +103,8 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Fem. Savancini Absolut Preto</h3>
-                    <span class="card__status">R$349,00</span>
+                    <h3 class="card__title">Macacão Fem. Savancini Absolut</h3>
+                    <span class="card__status">R$ 349,00</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Kart n°2</p>
@@ -117,8 +117,8 @@
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Revit Hyperspeed Preto c/ Vermelho M56-XL</h3>        
-                    <span class="card__status">R$7.999,00</span>
+                    <h3 class="card__title">Macacão Revit Hyperspeed M56-XL</h3>        
+                    <span class="card__status">R$ 7.999,00</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Kart n°3.</p>
@@ -136,7 +136,7 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title">Luva OMP KS-2R</h3>       
-                    <span class="card__status">R$999,00</span>
+                    <span class="card__status">R$999,90</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°1 </p>
@@ -149,8 +149,8 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luva Alpinestars Kart Tech-1k V2 Branca</h3>
-                    <span class="card__status">R$499,00</span>
+                    <h3 class="card__title">Luva Alpinestars Kart Tech-1k V2</h3>
+                    <span class="card__status">R$499,90</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°2.</p>
@@ -164,7 +164,7 @@
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Luva 38s Branco c/ Preto</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <span class="card__status">R$299,90</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°3</p>
@@ -182,7 +182,7 @@
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title">Sapatilha Everlast Jump Fem.</h3>       
-                    <span class="card__status">R$99,00</span>
+                    <span class="card__status">R$ 99,00</span>
                   </div>
                 </div>
                 <p class="card__description">Sapatilha Kart n°1</p>
@@ -195,7 +195,7 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Sapatilha OMP Racing First 2020 Red </h3>
+                    <h3 class="card__title">Sapatilha OMP Racing First 2020</h3>
                     <span class="card__status">R$1.899,00</span>
                   </div>
                 </div>
