--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  
     <ul class="cards">
       <li>
-        <a href="" class="card">
+        <a href="./capacetemoto3.html" class="card">
           <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                   
@@ -89,7 +89,7 @@
         </a>      
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./macacaokart2.html" class="card">
           <img src="./imgkart/macacãokart2.png" class="card__image" alt="" />
           <div class="card__overlay">        
             <div class="card__header">             
@@ -103,7 +103,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./capaceteracing1.html" class="card">
           <img src="./imgracing/capaceteracing1.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                
@@ -125,7 +125,7 @@
     <!-- card -->
     <ul class="cards">
       <li>
-        <a href="" class="card">
+        <a href="./sapatilhakart1.html" class="card">
           <img src="./imgkart/sapatilhakart1.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                
@@ -139,7 +139,7 @@
         </a>      
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./luvaracing1.html" class="card">
           <img src="./imgracing/luvaracing1.png" class="card__image" alt="" />
           <div class="card__overlay">        
             <div class="card__header">             
@@ -153,7 +153,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./sapatilharacing1.html" class="card">
           <img src="./imgracing/sapatilharacing1.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                 
