--- a/macacaout.html
+++ b/macacaout.html
@@ -43,12 +43,18 @@
     <div class="descrito">
 
       <label><b>Macacão Texx Diana 2</b> <br> R$ 1.399,90<label> <br>
-        <select name="" id="tamanho"> 
+        <select name="" id="tamanho">
           <option value="Tamanho">Selecione um Tamanho</option>
-          <option value="P">P</option>
-          <option value="M">M</option>
-          <option value="G">G</option>
-          <option value="GG">GG</option>
+          <option value="42">42</option>
+          <option value="44">44</option>
+          <option value="46">46</option>
+          <option value="48">48</option>
+          <option value="50">50</option>
+          <option value="52">52</option>
+          <option value="54">54</option>
+          <option value="56">56</option>
+          <option value="58">58</option>
+          <option value="60">60</option>
         </select>
       <label id="descricao"> Características: </label><br> 
       <label id="conteudo">
