js cadastro, login e suporte

--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
         <hr>
         <div class="input-container">
             <label>Nome:</label>
-            <input type="text" class="input-field" id="nome" placeholder=" ex: João Araújo dos Santos">
+            <input type="text" class="input-field" id="name" placeholder=" ex: João Araújo dos Santos">
         </div>
             <div class="input-container">
             <label>Email:</label>
@@ -29,20 +29,14 @@
         </div>
             <div class="input-container">
             <label>Confirme sua senha:</label>
-            <input type="password" class="input-field" id="confirme">
+            <input type="password" class="input-field" id="confirm">
         </div>
         <hr>
  
         <div class="button">
             <button type="button" class="btn-cadlog" onclick="Cadastrar()">Cadastrar</button>
             <script>
-            Swal.fire({
-                position: 'top-end',
-                icon: 'success',
-                title: 'Your work has been saved',
-                showConfirmButton: false,
-                timer: 1500
-              })</script>
+       </script>
         </div>
     
         <a href="./login.html" class="cadlog">Já possui conta?</a>
@@ -64,6 +58,6 @@
         </div>
           
         </footer>
-        <script src="./JSC/cadlog.js"></script>
+        <script defer src="./JSC/cadlog.js"></script>
 </body>
 </html>
