--- a/login.html
+++ b/login.html
@@ -49,6 +49,6 @@
         </div>
           
         </footer> 
-        <script src="./JSC/cadlog.js"></script>
+        <script defer src="./JSC/cadlog.js"></script>
 </body>
 </html>
