--- a/suporte.html
+++ b/suporte.html
@@ -16,11 +16,11 @@
         <hr>
         <div class="input-container">
             <label>Nome:</label>
-            <input type="text" class="input-field" id="nome" placeholder=" ex: João Araújo dos Santos">
+            <input type="text" class="input-field" id="user">
         </div>
             <div class="input-container">
             <label>Email:</label>
-            <input type="email" class="input-field" id="email">
+            <input type="email" class="input-field" id="pass">
         </div>
         
         <div class="input-container">
