--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
               <li><a class="cadlog" href="./corrida.html">Corrida</a></li>
               <li><a class="cadlog" href="./moto.html">Moto</a></li>
               <li><a class="cadlog" href="./kart.html">Kart</a></li>
-              <li style="float:right"><a class="activec" href="#carrinho"><img src="./img/carrinho.png" alt=""></a></li>
+              <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
               <li style="float:right"><a href="./login.html" class="cadlog-cl">Login</a></li>
               <li style="float:right"><a href="./cadastro.html" class="cadlog-cl">Cadastro</a></li>
+              <li style="float:right"><a claa="activec" href="./usuario.html" ><img src="./img/UserMenor.png" alt=""></a></li>
             
           </ul>
  
