--- a/botaout3.html
+++ b/botaout3.html
@@ -21,7 +21,7 @@
         <li><a class="cadlog" href="./corrida.html">Corrida</a></li>
         <li><a class="cadlog" href="./moto.html">Moto</a></li>
         <li><a class="cadlog" href="./kart.html">Kart</a></li>
-        <li style="float:right"><a class="activec" href="#carrinho"><img src="./img/carrinho.png" alt=""></a></li>
+        <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
         <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
         <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         
@@ -54,7 +54,8 @@
           <option value="42">42</option>
           <option value="43">43</option>
           <option value="44">44</option>
-        </select>
+        </select><br>
+        qtd: <input type="number" value="1" min="1" max="10" id="qtd1"><br>
       <label id="descricao"> Características: </label><br> 
       <label id="conteudo">
         - MVRS - Sistema de liberação de viseira magnética é liberado em caso de falhas ou batidas <br>
@@ -86,6 +87,6 @@
 
   </ul>
 </footer>
-    
+<script src="./JSC/carlinhos.js"></script>
 </body>
 </html>
