--- a/capacetekart2.html
+++ b/capacetekart2.html
@@ -21,7 +21,7 @@
         <li><a class="cadlog" href="./corrida.html">Corrida</a></li>
         <li><a class="cadlog" href="./moto.html">Moto</a></li>
         <li><a class="cadlog" href="./kart.html">Kart</a></li>
-        <li style="float:right"><a class="activec" href="#carrinho"><img src="./img/carrinho.png" alt=""></a></li>
+        <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
         <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
         <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         
@@ -51,7 +51,8 @@
         <option value="L">L (59-60cm)</option>
         <option value="XL">XL (61-62cm)</option>
         <option value="XXL">XXL (63-64cm)</option>
-      </select>
+      </select><br>
+      qtd: <input type="number" value="1" min="1" max="10" id="qtd1"><br>
       <label id="descricao"> Características: </label><br> 
       <label id="conteudo">
         - MVRS - Sistema de liberação de viseira magnética é liberado em caso de falhas ou batidas <br>
@@ -83,6 +84,6 @@
 
   </ul>
 </footer>
-    
+<script src="./JSC/carlinhos.js"></script>
 </body>
 </html>
