--- a/luvamoto2.html
+++ b/luvamoto2.html
@@ -21,7 +21,7 @@
         <li><a class="cadlog" href="./corrida.html">Corrida</a></li>
         <li><a class="cadlog" href="./moto.html">Moto</a></li>
         <li><a class="cadlog" href="./kart.html">Kart</a></li>
-        <li style="float:right"><a class="activec" href="#carrinho"><img src="./img/carrinho.png" alt=""></a></li>
+        <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
         <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
         <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         
@@ -80,6 +80,6 @@
 
   </ul>
 </footer>
-    
+<script src="./JSC/carlinhos.js"></script>
 </body>
 </html>
