Atualização Carrinho OFC

--- a/balaclava2.html
+++ b/balaclava2.html
@@ -52,7 +52,7 @@
         <option value="GG">XL</option>
         <option value="GGG">GGG(XXG)</option>
       </select> <br>
-      <input type="number" value="1" min="1" max="10" id="qtd2"><br>
+      <input type="number" value="1" min="1" max="10" id="qtd1"><br>
       <label id="descricao"> Características: </label><br> 
       <label id="conteudo">
         - MVRS - Sistema de liberação de viseira magnética é liberado em caso de falhas ou batidas <br>
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"  id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"  > COMPRAR 🛒</button><br>
+  <button id="butao" type="button"  onclick="AddCarrinho('Balaclava Aberta Sparco Preta', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava2').src)"  > COMPRAR 🛒</button><br>
   
   </div>
     </div>
