--- a/capaceteracing1.html
+++ b/capaceteracing1.html
@@ -51,7 +51,8 @@
         <option value="L">L (59-60cm)</option>
         <option value="XL">XL (61-62cm)</option>
         <option value="XXL">XXL (63-64cm)</option>
-      </select>
+      </select><br>
+      <input type="number" value="1" min="1" max="10" id="qtd1"><br>
       <label id="descricao"> Características: </label><br> 
       <label id="conteudo">
         - MVRS - Sistema de liberação de viseira magnética é liberado em caso de falhas ou batidas <br>
@@ -60,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
