--- a/cadastro.html
+++ b/cadastro.html
@@ -20,7 +20,7 @@
             <input type="text" class="input-field" id="name" placeholder=" ex: João Araújo dos Santos">
         </div>
             <div class="input-container">
-            <label>Email:</label>
+            <label>Email:</label><br>
             <input type="email" class="input-field" id="user" placeholder=" ex: joaoaraujo@gmail.com">
         </div>
             <div class="input-container">
