--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li style="float:right"><a class="activec" href="./carrinho.html"><img src="./img/carrinho.png" alt=""></a></li>
               <li style="float:right"><a href="./login.html" class="cadlog-cl">Login</a></li>
               <li style="float:right"><a href="./cadastro.html" class="cadlog-cl">Cadastro</a></li>
-              <li style="float:right"><a claa="activec" href="./usuario.html" ><img src="./img/UserMenor.png" alt=""></a></li>
+              <li style="float:right"><a class="activec" href="./usuario.html" ><img src="./img/UserMenor.png" class="icon"></a></li>
             
           </ul>
  
@@ -37,8 +37,8 @@
                 <!-- carrosel -->
           <div class="slideshow-container">
  
-            <div class="mySlides fade">
-              <img src="./img/imgedit4.png" style="width:100%">
+            <div class="mySlides">
+              <img src="./img/imgedit1.png" style="width:100%">
             </div>
             
             <div class="mySlides fade">
