--- a/macacaokart1.html
+++ b/macacaokart1.html
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão MP20 Palling Racing', document.getElementById('qtd1').value, '899.90',  document.getElementById('macacaokart1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
