--- a/balaclava3.html
+++ b/balaclava3.html
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava3').src)" > COMPRAR 🛒</button><br>
+  <button id="butao" type="button" onclick="AddCarrinho('Balaclava Ski Cap', document.getElementById('qtd1').value, '79,99',  document.getElementById('balaclava3').src)" > COMPRAR 🛒</button><br>
   
   </div>
     </div>
