--- a/botamoto3.html
+++ b/botamoto3.html
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Red Dragon Action', document.getElementById('qtd1').value, '40.90',  document.getElementById('botamoto3').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
