--- a/calcaout1.html
+++ b/calcaout1.html
@@ -60,7 +60,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça LS2 Chart Lady Black/Red', document.getElementById('qtd1').value, '40.90',  document.getElementById('calcaout1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
