--- a/conjunto1.html
+++ b/conjunto1.html
@@ -59,7 +59,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Conjunto Capa de Chuva Pole Racing', document.getElementById('qtd1').value, '349,90',  document.getElementById('conjuntout1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
