--- a/luvakart1.html
+++ b/luvakart1.html
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva OMP KS-2R', document.getElementById('qtd1').value, '999,90',  document.getElementById('luvakart1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
