--- a/luvaracing2.html
+++ b/luvaracing2.html
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva Mattos Racing Adventure', document.getElementById('qtd1').value, '129.90',  document.getElementById('luvaracing2').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
