--- a/sapatilharacing1.html
+++ b/sapatilharacing1.html
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('balaclava1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Sapatilha Sparco Slalom RB-3.1 Azul', document.getElementById('qtd1').value, '749.90',  document.getElementById('sapatilharacing1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
