--- a/botamoto3.html
+++ b/botamoto3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bota Gaerne SG12 New </title>
+    <title>Bota Red Dragon Action </title>
     <link rel="stylesheet" href="./css/produto.css">
 </head>
 <header>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Red Dragon Action', document.getElementById('qtd1').value, '40.90',  document.getElementById('botamoto3').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Red Dragon Action', document.getElementById('qtd1').value, '499.90',  document.getElementById('botamoto3').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
