--- a/carrinho.html
+++ b/carrinho.html
@@ -67,7 +67,7 @@
                     
                     let x = ` <div class="container-car">
                         <div class="col-P">
-                            <img src="${item.imagem}" style="width:100px"> 
+                            <img id="img-prod" src="${item.imagem}" style="width:100px"> 
                         </div>
                         <div class="col-P">
                             <div class="produtos"> ${item.nome} </div>
