--- a/corrida.html
+++ b/corrida.html
@@ -195,8 +195,8 @@
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
-                    <span class="card__status">R$500.00</span>
+                    <h3 class="card__title">Sapatilha OMP Racing First</h3>
+                    <span class="card__status">R$ 1.599,90</span>
                   </div>
                 </div>
                 <p class="card__description">Sapatilha n°2.</p>
