--- a/macacaout.html
+++ b/macacaout.html
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Texx Diana 2', document.getElementById('qtd1').value, '1.399,90',  document.getElementById('macacaoout').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Texx Diana 2', document.getElementById('qtd1').value, '1399.90',  document.getElementById('macacaoout').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
@@ -88,6 +88,6 @@
 
   </ul>
 </footer>
-
+<script src="./JSC/carlinhos.js"></script>
 </body>
 </html>
