--- a/botaout3.html
+++ b/botaout3.html
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('botaout3').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Pantaneiro', document.getElementById('qtd1').value, '109.99',  document.getElementById('botaout3').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
