--- a/calcaout2.html
+++ b/calcaout2.html
@@ -60,7 +60,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('calcaout2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça Feminina Downhill Factory Rosa', document.getElementById('qtd1').value, '229.99',  document.getElementById('calcaout2').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
