--- a/capacetekart1.html
+++ b/capacetekart1.html
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('capacetekart1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Arai SK6 Branco', document.getElementById('qtd1').value, '2699.00',  document.getElementById('capacetekart1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
