--- a/capacetekart2.html
+++ b/capacetekart2.html
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('capacetekart2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Norisk FF3391 Preto c/ Rosa', document.getElementById('qtd1').value, '499.90',  document.getElementById('capacetekart2').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
