--- a/capacetekart3.html
+++ b/capacetekart3.html
@@ -42,7 +42,7 @@
     
     <div class="descrito">
 
-    <label><b>Capacete Integral K3 SV Multi MPLK</b> <br> R$ 1349,00<label> <br>
+    <label><b>Capacete Integral K3 SV Multi MPLK</b> <br> R$ 1.349,00<label> <br>
       <select name="" id="tamanho">
         <option value="Tamanho">Selecione um Tamanho</option>
         <option value="XS">XS (53-54cm)</option>
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('capacetekart3').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Integral K3 SV Multi MPLK', document.getElementById('qtd1').value, '1349.00',  document.getElementById('capacetekart3').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
