--- a/capaceteracing2.html
+++ b/capaceteracing2.html
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Balaclava DryUV Paddoci Azul', document.getElementById('qtd1').value, '40.90',  document.getElementById('capaceteracing2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Capacete Ayrton Senna Réplica', document.getElementById('qtd1').value, '849.90',  document.getElementById('capaceteracing2').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
