--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <h3 class="ctn-title">Login</h3>
         <hr>
         <div class="input-container">
-            <label>Email:</label><br>
+            <label>Email:</label>
             <input type="email" class="input-field" id="userLog" placeholder=" ex: joaoaraujo@gmail.com">
         </div>
             <div class="input-containerr">
