--- a/luvaracing2.html
+++ b/luvaracing2.html
@@ -42,7 +42,7 @@
     
     <div class="descrito">
 
-      <label><b>Luva Mattos Racing Adventure</b> <br> R$ 129,90<label> <br>
+      <label><b>Luva Corsa EvoKart</b> <br> R$ 129,90<label> <br>
         <select name="" id="tamanho">
           <option value="Tamanho">Selecione um Tamanho</option>
           <option value="P">P</option>
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva Mattos Racing Adventure', document.getElementById('qtd1').value, '129.90',  document.getElementById('luvaracing2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva Corsa EvoKart', document.getElementById('qtd1').value, '129.90',  document.getElementById('luvaracing2').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
