--- a/macacaokart1.html
+++ b/macacaokart1.html
@@ -42,7 +42,7 @@
     
     <div class="descrito">
 
-      <label><b>Macacão MP20 Palling Racing</b> <br> R$ 899,90<label> <br>
+      <label><b>Macacão MP20 Pailler Racing</b> <br> R$ 899,90<label> <br>
         <select name="" id="tamanho">
           <option value="Tamanho">Selecione um Tamanho</option>
           <option value="42">42</option>
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão MP20 Palling Racing', document.getElementById('qtd1').value, '899.90',  document.getElementById('macacaokart1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão MP20 Pailler Racing', document.getElementById('qtd1').value, '899.90',  document.getElementById('macacaokart1').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
