--- a/macacaoracing3.html
+++ b/macacaoracing3.html
@@ -42,7 +42,7 @@
     
     <div class="descrito">
 
-      <label><b>Macacão Kart Sparco Prime K 2020</b> <br> R$ 6.999,90<label> <br>
+      <label><b>Macacão Kart Bravar Sublimado</b> <br> R$ 6.999,90<label> <br>
         <select name="" id="tamanho">
           <option value="Tamanho">Selecione um Tamanho</option>
           <option value="42">42</option>
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Kart Sparco Prime K 2020', document.getElementById('qtd1').value, '6.999,90',  document.getElementById('macacaoracing3').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Kart Bravar Sublimado', document.getElementById('qtd1').value, '6999.90',  document.getElementById('macacaoracing3').src)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
