--- a/usuario.html
+++ b/usuario.html
@@ -19,7 +19,7 @@
       <!-- Div  troca de Email -->
 
         <div class="trocarEmail">
-          <button class="buttubE" id="divdiv" id="userPesquisa">Alterar E-mail</button>
+          <button class="buttubE" id="divdiv" >Alterar E-mail</button>
         
         </div>
 
@@ -29,10 +29,10 @@
 
         <div class="divEmail">
           <label class="labbalU">E-mail Atual</label> <hr>
-          <input  class="input" id="userPesquisa"type="text"><hr>
+          <input class="input" id="emailUsuario" id="userPesquisa"type="text"><hr>
 
           <label class="labbalU">E-mail Novo</label> <hr>
-          <input class="input"  id="userPesquisa"type="text"><hr>
+          <input class="input" id="NovoEmail-Usuario" id="userPesquisa"type="text"><hr>
 
          <b><button class="enviarUsuario" onclick="Pesquisar()">Pesquisar</button></b>
         <!-- // <button onclick="Pesquisar()">Pesquisar</button><button onclick="Atualizar()">Atualizar</button><br><br> -->
@@ -53,7 +53,7 @@
           <input class="input" id="senhaUsuario" type="text"><hr>
 
           <label class="labbalU">Nova Senha </label> <hr>
-          <input class="input"  id="passPesquisa"type="text"><hr>
+          <input class="input" id="NovaSenha-Usuario" type="text"><hr>
 
           <b><button class="enviarUsuario-teal">Atualizar</button></b>
 
@@ -117,6 +117,6 @@
         </div>
           
         </footer>
-     <script src="./JSC/usuario.js"></script>
+     <script src="./"></script>
 </body>
 </html>
