mudanças css pg produtos e carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -30,9 +30,10 @@
       </nav>
       <h2 class="title-car">Meu Carrinho: </h2><br>
       <div class="titulos">
-        <label class="prod">Produto</label>
-        <label class="qtd">Quantidade</label>
-        <label class="preco">Preço</label>
+        <h3 class="prod">Produto:</h3>
+        <h3 class="qtd">Quantidade:</h3>
+        <h3 class="preco">Preço:</h3>
+
       </div>
       <center>
       <div class="container-full">
