--- a/carrinho.html
+++ b/carrinho.html
@@ -77,6 +77,9 @@
                             <div class="quantidade">${item.quantidade} </div>
                         </div>
                         <div class="col-P">
+                          <div class="tamanho">${item.tamanho} </div>
+                          </div>
+                        <div class="col-P">
                             <div class="valor">${total.toFixed(2)} </div>
                         </div>  
                         <div class="col-P">
