atualização produtos select

--- a/balaclava2.html
+++ b/balaclava2.html
@@ -57,7 +57,7 @@
               <label class="qtd">QUANTIDADE:</label>
               <input type="number" value="1" min="1" max="20" id="qtd1" placeholder="Quantidade"><br>
             
-              <button id="butao" type="button" class="button-1" onclick="AddCarrinho('Balaclava Paddock DryUV  ', document.getElementById('qtd1').value, '44.90',  document.getElementById('balaclava1').src)" > Adicionar ao carrinho</button>
+              <button id="butao" type="button" class="button-1" onclick="AddCarrinho('Balaclava Paddock DryUV  ', document.getElementById('qtd1').value, '44.90',  document.getElementById('balaclava1').src,document.getElementById('tamanho').value)" > Adicionar ao carrinho</button>
               <button  id="btn-comprar" class="button-2" type="button">Comprar agora</button>
           </div>
 
