--- a/calcaout2.html
+++ b/calcaout2.html
@@ -44,7 +44,7 @@
 
       <label><b>Calça Feminina Downhill Factory Rosa  </b> <br> R$ 229,99<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="PP">PP (36)</option>
           <option value="P">P (38)</option>
           <option value="M">M (40</option>
@@ -60,7 +60,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça Feminina Downhill Factory Rosa', document.getElementById('qtd1').value, '229.99',  document.getElementById('calcaout2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça Feminina Downhill Factory Rosa', document.getElementById('qtd1').value, '229.99',  document.getElementById('calcaout2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
