--- a/conjunto2.html
+++ b/conjunto2.html
@@ -44,7 +44,7 @@
 
       <label><b>Conjunto Capa de Chuva Nave</b> <br> R$ 199,99<label> <br>
         <select name="" id="tamanho"> 
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="P">P</option>
           <option value="M">M</option>
           <option value="G">G</option>
@@ -59,7 +59,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Conjunto Capa de Chuva Nave', document.getElementById('qtd1').value, '199.99',  document.getElementById('conjuntout2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Conjunto Capa de Chuva Nave', document.getElementById('qtd1').value, '199.99',  document.getElementById('conjuntout2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
