--- a/luvakart2.html
+++ b/luvakart2.html
@@ -44,7 +44,7 @@
 
       <label><b>Luva Alpinestars Kart Tech-1k V2</b> <br> R$ 499,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="P">P</option>
           <option value="M">M</option>
           <option value="G">G</option>
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva Alpinestars Kart Tech-1k V2', document.getElementById('qtd1').value, '499,90',  document.getElementById('luvakart2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva Alpinestars Kart Tech-1k V2', document.getElementById('qtd1').value, '499,90',  document.getElementById('luvakart2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
