--- a/macacaout.html
+++ b/macacaout.html
@@ -44,7 +44,7 @@
 
       <label><b>Macacão Texx Diana 2</b> <br> R$ 1.399,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="42">42</option>
           <option value="44">44</option>
           <option value="46">46</option>
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Texx Diana 2', document.getElementById('qtd1').value, '1399.90',  document.getElementById('macacaoout').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão Texx Diana 2', document.getElementById('qtd1').value, '1399.90',  document.getElementById('macacaoout').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
