--- a/balaclava3.html
+++ b/balaclava3.html
@@ -46,7 +46,7 @@
             <h3 class="h3-valor">R$ 79,99</h3>
 
             <select name="" id="tamanho">
-                <option value="tamanho">TAMANHO</option>
+                <option value="">TAMANHO</option>
                 <option value="PP">PP(XS)</option>
                 <option value="P">P(S)</option>
                 <option value="M">M(M)</option>
@@ -57,7 +57,7 @@
               <label class="qtd">QUANTIDADE:</label>
               <input type="number" value="1" min="1" max="20" id="qtd1" placeholder="Quantidade"><br>
             
-              <button id="butao" type="button" class="button-1" onclick="AddCarrinho('Balaclava Paddock DryUV  ', document.getElementById('qtd1').value, '44.90',  document.getElementById('balaclava1').src)" > Adicionar ao carrinho</button>
+              <button id="butao" type="button" class="button-1" onclick="AddCarrinho('Balaclava Paddock DryUV  ', document.getElementById('qtd1').value, '44.90',  document.getElementById('balaclava1').src,document.getElementById('tamanho').value)" > Adicionar ao carrinho</button>
               <button  id="btn-comprar" class="button-2" type="button">Comprar agora</button>
           </div>
 
