--- a/botamoto2.html
+++ b/botamoto2.html
@@ -44,7 +44,7 @@
 
       <label><b>Bota Gaerne SG12 New</b> <br> R$ 4.999,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um tamanho</option>
+          <option value="">Selecione um tamanho</option>
           <option value="36">36</option>
           <option value="37">37</option>
           <option value="38">38</option>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Gaerne SG12 New', document.getElementById('qtd1').value, '4.999,90',  document.getElementById('botamoto2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Gaerne SG12 New', document.getElementById('qtd1').value, '4.999,90',  document.getElementById('botamoto2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
