--- a/botaout3.html
+++ b/botaout3.html
@@ -44,7 +44,7 @@
 
       <label><b>Bota Pantaneiro</b> <br> R$ 109,99<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um tamanho</option>
+          <option value="">Selecione um tamanho</option>
           <option value="36">36</option>
           <option value="37">37</option>
           <option value="38">38</option>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Pantaneiro', document.getElementById('qtd1').value, '109.99',  document.getElementById('botaout3').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Bota Pantaneiro', document.getElementById('qtd1').value, '109.99',  document.getElementById('botaout3').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
