--- a/calcaout1.html
+++ b/calcaout1.html
@@ -44,7 +44,7 @@
 
       <label><b>Calça LS2 Chart Lady Black/Red </b> <br> R$ 749,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="PP">PP (36)</option>
           <option value="P">P (38)</option>
           <option value="M">M (40</option>
@@ -60,7 +60,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça LS2 Chart Lady Black/Red', document.getElementById('qtd1').value, '749.90',  document.getElementById('calcaout1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Calça LS2 Chart Lady Black/Red', document.getElementById('qtd1').value, '749.90',  document.getElementById('calcaout1').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
