--- a/capacetemoto1.html
+++ b/capacetemoto1.html
@@ -44,7 +44,7 @@
 
     <label><b>Capacete Mx Fox V1 Weld Black Iridium </b> <br> R$ 1.599,00<label> <br>
       <select name="" id="tamanho">
-        <option value="Tamanho">Selecione um Tamanho</option>
+        <option value="">Selecione um Tamanho</option>
         <option value="XS">XS (53-54cm)</option>
         <option value="S">S (55-56cm)</option>
         <option value="M">M (57-58cm)</option>
@@ -61,7 +61,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button" onclick="AddCarrinho('Capacete Mx Fox V1 Weld Black Iridium', document.getElementById('qtd1').value, '1599.00',  document.getElementById('capacetemoto1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button" onclick="AddCarrinho('Capacete Mx Fox V1 Weld Black Iridium', document.getElementById('qtd1').value, '1599.00',  document.getElementById('capacetemoto1').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
