--- a/jaquetaout.html
+++ b/jaquetaout.html
@@ -44,7 +44,7 @@
 
       <label><b>Jaqueta X11 Travel 2</b> <br> R$ 999,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="P">P</option>
           <option value="M">M</option>
           <option value="G">G</option>
@@ -60,7 +60,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"  onclick="AddCarrinho('Jaqueta X11 Travel 2', document.getElementById('qtd1').value, '999.90',  document.getElementById('jaquetaout').src)" > COMPRAR 🛒</button><br>
+  <button id="butao" type="button"  onclick="AddCarrinho('Jaqueta X11 Travel 2', document.getElementById('qtd1').value, '999.90',  document.getElementById('jaquetaout').src,document.getElementById('tamanho').value)" > COMPRAR 🛒</button><br>
   
   </div>
     </div>
