--- a/luvakart1.html
+++ b/luvakart1.html
@@ -44,7 +44,7 @@
 
       <label><b>Luva OMP KS-2R</b> <br> R$ 999,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="P">P</option>
           <option value="M">M</option>
           <option value="G">G</option>
@@ -58,7 +58,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva OMP KS-2R', document.getElementById('qtd1').value, '999,90',  document.getElementById('luvakart1').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Luva OMP KS-2R', document.getElementById('qtd1').value, '999,90',  document.getElementById('luvakart1').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
