--- a/macacaoracing2.html
+++ b/macacaoracing2.html
@@ -44,7 +44,7 @@
 
       <label><b>Macacão X11 Speed 2</b> <br> R$ 2.549,99<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um Tamanho</option>
+          <option value="">Selecione um Tamanho</option>
           <option value="42">42</option>
           <option value="44">44</option>
           <option value="46">46</option>
@@ -65,7 +65,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão X11 Speed 2', document.getElementById('qtd1').value, '2549.99',  document.getElementById('macacaoracing2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Macacão X11 Speed 2', document.getElementById('qtd1').value, '2549.99',  document.getElementById('macacaoracing2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
