--- a/sapatilharacing2.html
+++ b/sapatilharacing2.html
@@ -44,7 +44,7 @@
 
       <label><b>Sapatilha OMP Racing First</b> <br> R$ 1.599,90<label> <br>
         <select name="" id="tamanho">
-          <option value="Tamanho">Selecione um tamanho</option>
+          <option value="">Selecione um tamanho</option>
           <option value="36">36</option>
           <option value="37">37</option>
           <option value="38">38</option>
@@ -64,7 +64,7 @@
         - 9 entradas e 4 saídas de ar para um fluxo de ar ideal</label>       
   <br>
      
-  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Sapatilha OMP Racing First', document.getElementById('qtd1').value, '1599.90',  document.getElementById('sapatilharacing2').src)"> COMPRAR 🛒</button><br>
+  <button id="butao" type="button"id="adicionar1" id="produto1" onclick="AddCarrinho('Sapatilha OMP Racing First', document.getElementById('qtd1').value, '1599.90',  document.getElementById('sapatilharacing2').src,document.getElementById('tamanho').value)"> COMPRAR 🛒</button><br>
   
   </div>
     </div>
